# pingpong

./: CMakeLists.txt  README.md
benchmark/: job_template.sh  pingpong_benchmark.cpp  start.sh  supermuc_load_config.sh
includes/: pingpong.hpp
plots/: evaluation.r  process_data.py  utils.r
src/: pingpong.cpp  timer.cpp
